[TASK] Add changes for TYPO3 v11

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "description": "Adds a new page doktype for news.",
     "homepage": "https://b13.com",
     "require": {
-        "typo3/cms-core": "^10.0 || ^11.5"
+        "typo3/cms-core": "^11.5",
+        "php": ">=7.4.0"
     },
     "autoload": {
         "psr-4": {
